# vault-launcher

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  saveguard.rs
src/renderer/: app.js  index.html  style.css
