[package]
name = "vault"
version = "0.1.0"
description = "VAULT — A fast, aesthetic game launcher with controller support and save management"
authors = ["anthn"]
license = "MIT"
repository = "https://github.com/anthn/vault-launcher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
walkdir = "2.5.0"
reqwest = { version = "0.13.3", features = ["json"] }
urlencoding = "2.1.3"
notify = "6.1.1"
zip = "0.6"
chrono = "0.4"


windows = { version = "0.58", features = ["Win32_System_RestartManager", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }
sysinfo = "0.32"
dirs = "6.0.0"
